--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+.DS_Store
+
 ## Build generated
 build/
 DerivedData/
@@ -38,6 +40,7 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 .build/
+/Packages
 
 # CocoaPods
 #
